--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,11 +1,50 @@
-<p>
-    A little about this site...
-</p>
 
-<p>
-    <img src="/images/circle.png">
-</p>
+<head>
+    <meta http-equiv="cleartype" content="on">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-<p>
-    <a href="/">Home</a>
-</p>
+<body>
+
+    <header>
+        <h1><a href="/">No Late Fees&trade;</a></h1>
+        <ul class="nav">
+            <li><a href="/new">Add a Book</a></li>
+            <li><a href="/about">About this site</a></li>
+        </ul>
+    </header>
+
+     <div class="libraryWrapper">
+        <p class="about">
+            <strong>No Late Fees&trade;</strong> is a public library for the community of Yale Graphic Design.
+        </p>
+        <p class="about">
+           You may contribute new books to the library.
+        </p>
+        <p class="about">
+         Add some books, or borrow from your classmates as needed.
+        </p>
+         <p class="about">
+           If you would like to borrow a book from a neighbor, please do so.
+        </p>
+        <p class="about">
+           There are no late fees.
+        </p>
+    </div><!--END libraryWrapper-->
+    
+
+
+<footer>
+    <ul class="one-fourth">
+        <li><strong>No Late Fees&trade;</strong></li>
+        <li><a href="http://www.art.yale.edu">Yale School of Art</a></li>
+    </ul>
+   
+    <ul class="one-fourth">
+        <li>Contact</li>
+        <li>Credits</li>
+    </ul>
+</footer>
+
+</body>
