--- a/views/student.hbs
+++ b/views/student.hbs
@@ -1,30 +1,26 @@
-
 <body>
 
     <header>
         <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
-            <li><a href="/book/new">Add a Book</a></li>
+            <li><a href="/new">Add a Book</a></li>
             <li><a href="/about">About this site</a></li>
         </ul>
     </header>
 
+  
+
      <div class="libraryWrapper">
+           <h2 class="student">{{student}}</h2>
     {{#each books}}
-    
-   
-   
-        <p class="entry">
-                <a class="student" href="/student?name={{student}}">{{student}}</a> added the book <a class="title" href="/book?name={{title}}"><strong>{{title}}</strong></a> by <a class="author" href="/author?name={{author}}">{{author}}</a>
-                on <span class="created">{{created}}</span>.
-                <a href="borrow?id={{id}}" class="borrow">Borrow</a>
+        <p>
+              <a class="title" href="#"><strong>{{title}}</a></strong> by <a class="author" herf="#">{{author}}</a>
         </p>
   
     {{/each}}
     </div><!--END libraryWrapper-->
-
-
-<footer>
+    
+    <footer>
     <ul class="one-fourth">
         <li><strong>No Late Fees&trade;</strong></li>
         <li><a href="http://www.art.yale.edu">Yale School of Art</a></li>
