update to about page

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -20,13 +20,10 @@
             <strong>No Late Fees&trade;</strong> is a public library for the community of Yale Graphic Design.
         </p>
         <p class="about">
-           You may contribute new books to the library.
+           You may add some books to the library, peruse the exchange of books, or borrow from your classmates as needed.
         </p>
         <p class="about">
-         Add some books, or borrow from your classmates as needed.
-        </p>
-         <p class="about">
-           If you would like to borrow a book from a neighbor, please do so.
+           Students currently enrolled in the Graphic Design program will have access to share and borrow books from each other.
         </p>
         <p class="about">
            There are no late fees.
