--- a/views/about.hbs
+++ b/views/about.hbs
@@ -17,17 +17,28 @@
 
      <div class="libraryWrapper">
         <p class="about">
-            <strong>No Late Fees&trade;</strong> is a public library for the community of Yale Graphic Design.
+            <strong>No Late Fees&trade;</strong> is a Public Library for the community of Yale Graphic Design's Atrium.
         </p>
         <p class="about">
-           You may add some books to the library, peruse the exchange of books, or borrow from your classmates as needed.
+           It is designed to encourage the multiplication of our resources with each other.
         </p>
         <p class="about">
-           Students currently enrolled in the Graphic Design program will have access to share and borrow books from each other.
+           Add a book to <strong>No Late Fees&trade;</strong>, or borrow from your classmates.
         </p>
         <p class="about">
-           There are no late fees.
+           Search by <span class="author">Authors</span>, <span class="title">Titles</span>, or a <span class="student">Student's</span> whole collection.
         </p>
+        <p class="about">
+            You will see the entirety of the Library's history recorded here on this website.
+        </p>
+        <p class="about">
+           And, there are no late fees.
+        </p>
+       
+        <p class="about">&nbsp;</p>
+        <p class="about">Design: <a href="http://www.benfehrmanlee.info" target="_blank">Ben Fehrman-Lee</a></p>
+        <p class="about">Development: <a href="http://www.linkedbyair.net" target="_blank">Dan Michaelson</a></p>
+        <p class="about">Running on: <a href="http://www.heroku.com" target="_blank">Heroku</a></p>
     </div><!--END libraryWrapper-->
     
 
@@ -35,12 +46,12 @@
 <footer>
     <ul class="one-fourth">
         <li><strong>No Late Fees&trade;</strong></li>
-        <li><a href="http://www.art.yale.edu">Yale School of Art</a></li>
+        <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
     <ul class="one-fourth">
-        <li>Contact</li>
-        <li>Credits</li>
+        <li><a href="mailto:benjamin.d.lee@yale.edu" target="_blank">Contact</a></li>
+        <li>&copy; 2015</li>
     </ul>
 </footer>
 
