--- a/views/book_create.hbs
+++ b/views/book_create.hbs
@@ -9,7 +9,7 @@
     </header>
     
     <div class="libraryWrapper">
-    <p>Thanks for contirbuting <span class="title">{{book.title}}</span> by <span class="author">{{book.author}}!</span></p>
+    <p>Thanks for contirbuting <span class="title">{{book.title}}</span> by <span class="author">{{book.author}}</span> to <strong>No Late Fees&trade;</strong></p>
 
     <p>
         <a href="/">Home</a>
@@ -20,12 +20,12 @@
     <footer>
     <ul class="one-fourth">
         <li><strong>No Late Fees&trade;</strong></li>
-        <li><a href="http://www.art.yale.edu">Yale School of Art</a></li>
+        <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
     <ul class="one-fourth">
-        <li>Contact</li>
-        <li>Credits</li>
+        <li><a href="mailto:benjamin.d.lee@yale.edu" target="_blank">Contact</a></li>
+        <li>&copy; 2015</li>
     </ul>
 </footer>
     
