--- a/views/student.hbs
+++ b/views/student.hbs
@@ -23,12 +23,12 @@
     <footer>
     <ul class="one-fourth">
         <li><strong>No Late Fees&trade;</strong></li>
-        <li><a href="http://www.art.yale.edu">Yale School of Art</a></li>
+        <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
     <ul class="one-fourth">
-        <li>Contact</li>
-        <li>Credits</li>
+        <li><a href="mailto:benjamin.d.lee@yale.edu" target="_blank">Contact</a></li>
+        <li>&copy; 2015</li>
     </ul>
 </footer>
 
