--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,10 +6,10 @@ ul { -webkit-margin-start: 0px; -webkit-margin-end: 0px; -webkit-padding-start: 
 
 /* Layout */
 body { width: 100%;}
-header, footer { padding: 20px;}
+header, footer { padding: 16px;}
 .libraryWrapper { padding: 20px;} 
 p {border-top: 1px solid #000;}
-footer { border-top: 1px solid #000;}
+footer { border-top: 1px solid #000; position: fixed; bottom: 0; width: 100%; background: #fff; z-index: 0;}
 footer ul { display: inline; width: 100%;}
 ul.one-fourth { width: 21.5%; margin-right: 20px; float: left;}
 
@@ -20,9 +20,9 @@ a:hover {background-color:#FFFF99;}
 /* Typography */
 h1, h1 a { font: 24px Arial; font-weight: 800; line-height: 30px;}
 p, ul, li, a, h2 { font: 16px Arial; line-height: 24px;}
-a.student, h2.student, span.student { color: #3333FF; }
-a.title, h2.title, span.title { font-weight: 700; color: #FF3300;}
-a.author, h2.author, span.author {color: #FFCC00;}
+a.student, h2.student, span.student, label.student { color: #3333FF; }
+a.title, h2.title, span.title, label.title { font-weight: 700; color: #FF3300;}
+a.author, h2.author, span.author, label.author {color: #FFCC00;}
 span.created {color: #339933;}
 a.borrow {float:right;}
 ul.book-info li {border-top: 1px solid #000;}
@@ -31,45 +31,86 @@ ul.book-info li {border-top: 1px solid #000;}
 form {
 	font: 16px normal 'Arial';
 	line-height:24px;
-
+	border: 1px solid #000;
+	padding: 24px;
 	margin: auto;
+	float:left;
 	background: #fff;
-
-
+	width: 50%;
 }
 
-input:focus {
-    outline:none;
+
+
+form li {
+	border-top: 1px solid #000;
 }
+
+book_form ul {
+	list-style-type:none;
+    list-style-position:outside;
+    margin:0px;
+    padding:0px;
+    
+}
+
+book_form ul li {
+    widht: 100%;
+}
+
+label {
+	width:15%;
+    display:inline-block;
+    float: left;
+    margin-right: ;
+}
+
+
+intput,  input:focus, textarea:focus { 
+    border: none; 
+  
+    } 
 
 
 input, text area, select    {
-
+box-shadow: none !important;
+width: 85%;
+border: none;
+outline: none;
 font: 16px normal 'Arial';
 line-height: 24px;
--webkit-box-sizing: border-box; /* For legacy WebKit based browsers */
--moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
 box-sizing: border-box;
+-webkit-box-sizing: border-box; 
+-moz-box-sizing: border-box; 
 
 }
 
 
 
 input.submit {
-font-size: 16px;
+ -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  font-weight: 700;
+  width: 15%;
+  color: #000;
+  background: #fff;
+  margin-top: 24px;
+  padding: 6px 10px 6px 10px;
+  border: solid #000 1px;
+  text-decoration: none;
 
 }
 
 input.submit:hover {
-	background: #0000FF;
-	color: #fff;
-	cursor: pointer;
+	background-color: #FFFF99;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* MEDIA */
 
-@media screen and (max-width: 768px) {
-	body {font-size:12px; line-height:16px; }
+@media screen and (max-width: 380px) {
+	html {font-size:12px; line-height:16px; }
 	footer ul {display: block;}
 	ul.one-fourth {width: 100%;}
 	.entry, form {width: 100%; }
