Strikethrough books that are on loan; allow returning books (next to the active loan only); show borrow link only next to added book that is not on loan, and next to returns for books that are not on loan

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,6 +26,9 @@ a.author, h2.author, span.author, label.author {color: #FFCC00;}
 span.created {color: #339933;}
 a.borrow {float:right;}
 ul.book-info li {border-top: 1px solid #000;}
+.on-loan {
+    text-decoration: line-through;
+}
 
 /* form */
 form {
