--- a/views/about.hbs
+++ b/views/about.hbs
@@ -11,7 +11,7 @@
         <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
             <li><a href="/new">Add a Book</a></li>
-            <li><a href="/about">About this site</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
     </header>
 
