--- a/views/author.hbs
+++ b/views/author.hbs
@@ -1,16 +1,16 @@
 <body>
 
     <header>
-        <h1>No Late Fees&trade;</h1>
+        <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
             <li><a href="/new">Add a Book</a></li>
-            <li><a href="/about">About this site</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
     </header>
 
    
     <div class="libraryWrapper">
-          <h2 class="author">{{author}}</h2>
+        <h2 class="author">{{author}}</h2>
 
         {{#each books}}
             <p>
@@ -24,13 +24,13 @@
                             <a class="student" href="/student?name={{student}}">{{student}}</a> borrowed the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
                             on <span class="created">{{created}}</span>.
                         {{else}}
-                            {{#if isReturn}}
-                                <a class="student" href="/student?name={{student}}">{{student}}</a> returned the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
-                                on <span class="created">{{created}}</span>.
-                            {{/if}}
+                        {{#if isReturn}}
+                            <a class="student" href="/student?name={{student}}">{{student}}</a> returned the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
+                            on <span class="created">{{created}}</span>.
+                        {{/if}}
                         {{/if}}
                     </p>
-                {{/each}}  
+                {{/each}}  <br/>
             </div>        
       
         {{/each}}
