--- a/views/book.hbs
+++ b/views/book.hbs
@@ -2,7 +2,7 @@
         <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
             <li><a href="/new">Add a Book</a></li>
-            <li><a href="/about">About this site</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
     </header>
 
@@ -10,6 +10,7 @@
 
 <div class="libraryWrapper">
     <h2 class="title">{{title}}</h2>
+    
 {{#each books}}
 
     <div class="book">
@@ -18,15 +19,18 @@
             <li><span class="author">Author: <a class="author" href="/author?name={{author}}">{{author}}</a></span></li>
             <li><span class="student">Student: <a class="student" href="/student?name={{student}}">{{student}}</a></span></li>
             <li></li>Added on: <span class="created">{{created}}</span></li>
-            <li></li>
             {{#if onLoan}}
-                <a href="/loan/return?book_id={{id}}">Return</a></li>
+                <a class="borrow" href="/loan/return?book_id={{id}}">Return</a></li>
             {{else}}
-                <a href="/loan/create?book_id={{id}}">Borrow</a></li>
+                <a class="borrow" href="/loan/create?book_id={{id}}">Borrow</a></li>
             {{/if}}
+            
+            
         </ul>
         
         <div class="events">
+            <p>Book History</p>
+            
             {{#each events}}
                 <p class="entry">
                     {{#if isLoan}}
@@ -39,6 +43,8 @@
                         {{/if}}
                     {{/if}}
                 </p>
+                    
+                
             {{/each}}  
         </div>
         
