--- a/views/book_new.hbs
+++ b/views/book_new.hbs
@@ -13,7 +13,7 @@ thing as filling in the form and pressing "Submit".
         <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
             <li><a href="/new">Add a Book</a></li>
-            <li><a href="/about">About this site</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
     </header>
 
