--- a/views/book_create.hbs
+++ b/views/book_create.hbs
@@ -9,7 +9,7 @@
     </header>
     
     <div class="libraryWrapper">
-    <p>Thanks for contirbuting <span class="title">{{book.title}}</span> by <span class="author">{{book.author}}</span> to <strong>No Late Fees&trade;</strong></p>
+    <p>Thanks for contributing <span class="title">{{book.title}}</span> by <span class="author">{{book.author}}</span> to <strong>No Late Fees&trade;</strong></p>
 
     <p>
         <a href="/">Home</a>
