--- a/views/student.hbs
+++ b/views/student.hbs
@@ -25,11 +25,11 @@
                     <p class="entry">
                         {{#if isLoan}}
                             <a class="student" href="/student?name={{student}}">{{student}}</a> borrowed the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
-                            on <span class="created">{{created}}</span>.
+                            on <span class="created">{{created_formatted}}</span>.
                         {{else}}
                             {{#if isReturn}}
                                 <a class="student" href="/student?name={{student}}">{{student}}</a> returned the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
-                                on <span class="created">{{created}}</span>.
+                                on <span class="created">{{created_formatted}}</span>.
                             {{/if}}
                         {{/if}}
                     </p>
