--- a/views/author.hbs
+++ b/views/author.hbs
@@ -13,20 +13,20 @@
         <h2 class="author">{{author}}</h2>
 
         {{#each books}}
-            <p>
-                  <a class="title {{loanClass}}" href="/book?name={{title}}"><strong>{{title}}</strong></a>
-            </p>
+            <p><a class="title {{loanClass}}" href="/book?name={{title}}"><strong>{{title}}</strong></a></p>
+            <p><span class="created">{{created_formatted}}</span></p>
+            
             
             <div class="events">
                 {{#each events}}
                     <p class="entry">
                         {{#if isLoan}}
                             <a class="student" href="/student?name={{student}}">{{student}}</a> borrowed the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
-                            on <span class="created">{{created}}</span>.
+                            on <span class="created">{{created_formatted}}</span>.
                         {{else}}
                         {{#if isReturn}}
                             <a class="student" href="/student?name={{student}}">{{student}}</a> returned the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
-                            on <span class="created">{{created}}</span>.
+                            on <span class="created">{{created_formatted}}</span>.
                         {{/if}}
                         {{/if}}
                     </p>
