--- a/views/book.hbs
+++ b/views/book.hbs
@@ -1,7 +1,7 @@
  <header>
         <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
-            <li><a href="/new">Add a Book</a></li>
+            <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
         </ul>
     </header>
