--- a/views/book_new.hbs
+++ b/views/book_new.hbs
@@ -12,7 +12,7 @@ thing as filling in the form and pressing "Submit".
      <header>
         <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
-            <li><a href="/new">Add a Book</a></li>
+            <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
         </ul>
     </header>
