--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,7 @@ body { width: 100%;}
 header, footer { padding: 16px;}
 .libraryWrapper { padding: 20px;} 
 p, h2.title, h2.author, h2.student {border-top: 1px solid #000;}
-footer { border-top: 1px solid #000; width: 100%; background: #fff; z-index: 0;}
+footer { border-top: 1px solid #000; padding-top: 20px; width: 100%; background: #fff; z-index: 0; clear: both;}
 footer ul { display: inline; width: 100%;}
 ul.one-fourth { width: 21.5%; margin-right: 20px; float: left;}
 br {line-height: 24px;}
@@ -35,7 +35,7 @@ form {
 	line-height:24px;
 	border: 1px solid #000;
 	padding: 24px;
-	margin: auto;
+	margin: 0 auto 40px auto;
 	float:left;
 	background: #fff;
 	width: 50%;
