--- a/views/book.hbs
+++ b/views/book.hbs
@@ -3,6 +3,7 @@
         <ul class="nav">
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/bookshelf">Bookshelf</a></li>
         </ul>
     </header>
 
@@ -28,25 +29,7 @@
             
         </ul>
         
-        <div class="events">
-            <p>Book History</p>
-            
-            {{#each events}}
-                <p class="entry">
-                    {{#if isLoan}}
-                        <a class="student" href="/student?name={{student}}">{{student}}</a> borrowed the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
-                        on <span class="created">{{created_formatted}}</span>.
-                    {{else}}
-                        {{#if isReturn}}
-                            <a class="student" href="/student?name={{student}}">{{student}}</a> returned the book <a class="title {{book.loanClass}}" href="/book?name={{book.title}}"><strong>{{book.title}}</strong></a> by <a class="author" href="/author?name={{book.author}}">{{book.author}}</a>
-                            on <span class="created">{{created_formatted}}</span>.
-                        {{/if}}
-                    {{/if}}
-                </p>
-                    
-                
-            {{/each}}  
-        </div>
+        
         
     </div>
 
@@ -55,7 +38,7 @@
 
 <footer>
     <ul class="one-fourth">
-        <li><strong>No Late Fees&trade;</strong></li>
+        <li><strong>No Late Fees</strong></li>
         <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
