--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,22 +8,23 @@
 <body>
 
     <header>
-        <h1><a href="/">No Late Fees&trade;</a></h1>
+        <h1><a href="/">No Late Fees</a></h1>
         <ul class="nav">
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="bookshelf">Bookshelf</a></li>
         </ul>
     </header>
 
      <div class="libraryWrapper">
         <p class="about">
-            <strong>No Late Fees&trade;</strong> is a Public Library for the community of Yale Graphic Design's Atrium.
+            <strong>No Late Fees</strong> is a Public Library for the community of Yale Graphic Design's Atrium.
         </p>
         <p class="about">
            It is designed to encourage the multiplication of our resources with each other.
         </p>
         <p class="about">
-           Add a book to <strong>No Late Fees&trade;</strong>, or borrow from your classmates.
+           Add a book to <strong>No Late Fees</strong>, or borrow from your classmates.
         </p>
         <p class="about">
            Search by <span class="author">Authors</span>, <span class="title">Titles</span>, or a <span class="student">Student's</span> whole collection.
@@ -45,7 +46,7 @@
 
 <footer>
     <ul class="one-fourth">
-        <li><strong>No Late Fees&trade;</strong></li>
+        <li><strong>No Late Fees</strong></li>
         <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
