--- a/views/book_create.hbs
+++ b/views/book_create.hbs
@@ -1,7 +1,7 @@
 <body>
     
     <header>
-        <h1><a href="/">No Late Fees&trade;</a></h1>
+        <h1><a href="/">No Late Fees</a></h1>
         <ul class="nav">
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
@@ -19,7 +19,7 @@
     
     <footer>
     <ul class="one-fourth">
-        <li><strong>No Late Fees&trade;</strong></li>
+        <li><strong>No Late Fees</strong></li>
         <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
