--- a/views/book_new.hbs
+++ b/views/book_new.hbs
@@ -10,10 +10,11 @@ thing as filling in the form and pressing "Submit".
 <body>
     
      <header>
-        <h1><a href="/">No Late Fees&trade;</a></h1>
+        <h1><a href="/">No Late Fees</a></h1>
         <ul class="nav">
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/book_shelf">Bookshelf</a></li>
         </ul>
     </header>
 
@@ -50,7 +51,7 @@ thing as filling in the form and pressing "Submit".
 
 <footer>
     <ul class="one-fourth">
-        <li><strong>No Late Fees&trade;</strong></li>
+        <li><strong>No Late Fees</strong></li>
         <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
